# USGS-MiscUtils

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.bcc32  Makefile.in  MicroTimer.cpp  MicroTimer.h  README  README.md  SpinnerThingy.cpp  SpinnerThingy.h  TODO  cmp_nocase.cpp  cmp_nocase.h  compare_nocase.cpp  compare_nocase.h  config.h.in  configure  configure.in  inputdefault.h  minmax.h
config/: mkinstalldirs
tests/: ideftest.cpp
